--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,4 +67,6 @@ dependencies {
     compile 'com.google.dagger:dagger:2.0.1'
     apt 'com.google.dagger:dagger-compiler:2.0.1'
     provided 'org.glassfish:javax.annotation:10.0-b28'
+    androidTestApt "com.google.dagger:dagger-compiler:2.0.1"
+    androidTestCompile "com.google.dexmaker:dexmaker:1.2" //todo not sure if this is necessary
 }
