--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,41 +4,39 @@
 
     <application
         android:allowBackup="true"
+        android:name=".DemoApplication"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/Theme.EspressoTestTheme">
         <activity
-            android:name=".activities.MainActivity"
-            android:label="@string/app_name">
+            android:name=".activities.MainActivity">
         </activity>
         <activity
-            android:name=".activities.SwitchActivity"
-            android:label="@string/app_name">
+            android:name=".activities.SwitchActivity">
         </activity>
         <activity
-            android:name=".activities.NavigationDrawerActivity"
-            android:label="@string/app_name">
+            android:name=".activities.NavigationDrawerActivity">
         </activity>
         <activity
-            android:name=".activities.PositionActivity"
-            android:label="@string/app_name">
+            android:name=".activities.PositionActivity">
         </activity>
         <activity
-            android:name=".activities.ViewPagerActivity"
-            android:label="@string/app_name">
+            android:name=".activities.ViewPagerActivity">
+        </activity>
+        <activity
+            android:name=".activities.HierarchyActivity">
+        </activity>
+        <activity
+            android:name=".activities.CustomIntentActivity"/>
+        <activity android:name=".dagger.DaggerActivity">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+
         </activity>
-        <activity
-            android:name=".activities.HierarchyActivity"
-            android:label="@string/app_name">
-        </activity>
-        <activity
-            android:name=".activities.CustomIntentActivity"
-            android:label="@string/app_name"/>
 
     </application>
 
