--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,24 +7,9 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/Theme.EspressoTestTheme">
+
         <activity
-            android:name="uk.co.jordanterry.espressoexamples.activities.MainActivity"
-            android:label="@string/app_name">
-        </activity>
-        <activity
-            android:name="uk.co.jordanterry.espressoexamples.activities.SwitchActivity"
-            android:label="@string/app_name">
-        </activity>
-        <activity
-            android:name="uk.co.jordanterry.espressoexamples.activities.NavigationDrawerActivity"
-            android:label="@string/app_name">
-        </activity>
-        <activity
-            android:name="uk.co.jordanterry.espressoexamples.activities.PositionActivity"
-            android:label="@string/app_name">
-        </activity>
-        <activity
-            android:name="uk.co.jordanterry.espressoexamples.activities.ViewPagerActivity"
+            android:name="espresso.examples.ui.activities.StartActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -32,14 +17,6 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity
-            android:name="uk.co.jordanterry.espressoexamples.activities.HierarchyActivity"
-            android:label="@string/app_name">
-        </activity>
-        <activity
-            android:name="uk.co.jordanterry.espressoexamples.activities.CustomIntentActivity"
-            android:label="@string/app_name"/>
-
     </application>
 
 </manifest>
