--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,22 +2,18 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    buildToolsVersion "23.0.2"
 
     defaultConfig {
-        applicationId "test.nice.testproject"
+        applicationId "espresso.examples"
         minSdkVersion 15
         targetSdkVersion 23
         versionCode 1
-        versionName "1.0"
+        versionName "2.0.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
     }
     buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
 
         debug {
             minifyEnabled false
@@ -26,11 +22,6 @@ android {
         }
     }
 
-    packagingOptions {
-        exclude 'META-INF/LICENSE.txt'
-        exclude 'META-INF/services/javax.annotation.processing.Processor'
-        exclude 'LICENSE.txt' // Hamcrest conflict
-    }
     lintOptions {
         abortOnError false
     }
@@ -38,26 +29,14 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:23.1.0'
-    compile 'com.android.support:support-v13:23.1.0'
+    compile 'com.android.support:appcompat-v7:23.0.1'
+    compile 'com.android.support:support-v13:23.0.1'
 
-    //Provides AndroidJUnitRunner
-    androidTestCompile ('com.android.support.test:runner:0.4') {
-        exclude module: 'support-annotations'
-    }
-    // Provides JUnit 4 rules
-    androidTestCompile ('com.android.support.test:rules:0.4') {
-        exclude module: 'support-annotations'
-    }
-    // Builds and runs Espresso tests
-    androidTestCompile ('com.android.support.test.espresso:espresso-core:2.2.1') {
-        exclude module: 'support-annotations'
-    }
+    compile 'com.squareup.retrofit2:retrofit:2.0.2'
+    compile 'com.squareup.retrofit2:converter-gson:2.0.2'
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.6.2'
 
-    androidTestCompile ('com.android.support.test.espresso:espresso-contrib:2.2.1') {
-        exclude module: 'support-annotations'
-        exclude group: 'com.android.support', module: 'appcompat'
-        exclude group: 'com.android.support', module: 'support-v4'
-        exclude module: 'recyclerview-v7'
-    }
+
+    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.1'
+
 }
